--- a/kellerkompanie-sync/NewsPage.xaml
+++ b/kellerkompanie-sync/NewsPage.xaml
@@ -3,57 +3,62 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:kellerkompanie_sync_wpf"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="NewsPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <StackPanel>
+    <Grid>
         <ListView
             Name="NewsListView"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
             Background="#161618"
             BorderThickness="0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Padding" Value="0" />
                     <Setter Property="Margin" Value="0,1,0,1" />
-                    <Setter Property="Width" Value="{Binding Path=ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type ScrollContentPresenter}}}" />
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <EventSetter Event="Selected" Handler="ListViewItem_Selected" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Background="#212121" Orientation="Horizontal">
+                    <DockPanel Background="#212121" LastChildFill="True">
                         <Image
                             Name="NewsItemImage"
                             Width="36"
                             Height="36"
-                            Margin="8,8,8,8"
+                            Margin="16,8,16,8"
                             VerticalAlignment="Center"
-                            Source="/Images/announcement.png" />
-                        <StackPanel>
+                            DockPanel.Dock="Left"
+                            Source="{Binding Icon}" />
+                        <StackPanel HorizontalAlignment="Stretch">
                             <TextBlock
                                 Name="NewsItemTitle"
                                 Margin="0,16,0,0"
+                                HorizontalAlignment="Stretch"
                                 FontSize="20"
                                 FontWeight="SemiBold"
                                 Foreground="#ee4d2e"
-                                Text="{Binding title}"
+                                Text="{Binding Title}"
                                 TextTrimming="CharacterEllipsis"
                                 TextWrapping="Wrap" />
                             <TextBlock
                                 Name="NewsItemContent"
                                 Margin="0,0,0,16"
+                                HorizontalAlignment="Stretch"
                                 FontSize="16"
                                 Foreground="DarkGray"
-                                Text="{Binding content}"
+                                Text="{Binding Content}"
                                 TextTrimming="CharacterEllipsis"
                                 TextWrapping="Wrap" />
                         </StackPanel>
-                    </StackPanel>
+                    </DockPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </StackPanel>
+    </Grid>
 </Page>
