--- a/kellerkompanie-sync/NewsPage.xaml
+++ b/kellerkompanie-sync/NewsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="kellerkompanie_sync_wpf.NewsPage"
+    x:Class="kellerkompanie_sync.NewsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
