--- a/kellerkompanie-sync/SettingsPage.xaml
+++ b/kellerkompanie-sync/SettingsPage.xaml
@@ -1,9 +1,9 @@
 ﻿<Page
-    x:Class="kellerkompanie_sync_wpf.SettingsPage"
+    x:Class="kellerkompanie_sync.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:kellerkompanie_sync_wpf"
+    xmlns:local="clr-namespace:kellerkompanie_sync"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Settings"
     d:DesignHeight="450"
