--- a/kellerkompanie-sync/MainWindow.xaml
+++ b/kellerkompanie-sync/MainWindow.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:kellerkompanie_sync"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="kellerkompanie-sync (0.1.0-alpha)"
     Width="800"
@@ -14,6 +13,62 @@
     LocationChanged="MainWindow_LocationChanged"
     SizeChanged="MainWindow_SizeChanged"
     mc:Ignorable="d">
+
+    <Window.Resources>
+        <Style
+            x:Key="OrangeButton"
+            BasedOn="{StaticResource {x:Type Button}}"
+            TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+
+            <Setter Property="Foreground" Value="#f2f5f4" />
+            <Setter Property="Background" Value="#ee4d2e" />
+            <Setter Property="BorderThickness" Value="0" />
+        </Style>
+        <Style
+            x:Key="PlayUpdateButton"
+            BasedOn="{StaticResource OrangeButton}"
+            TargetType="Button">
+            <Setter Property="Width" Value="140" />
+            <Setter Property="Height" Value="42" />
+            <Setter Property="Margin" Value="0,0,0,30" />
+            <Setter Property="VerticalAlignment" Value="Bottom" />
+            <Setter Property="FontSize" Value="24" />
+        </Style>
+        <Style
+            x:Key="GreyButton"
+            BasedOn="{StaticResource {x:Type Button}}"
+            TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="Foreground" Value="#f2f5f4" />
+            <Setter Property="Background" Value="#212121" />
+            <Setter Property="BorderThickness" Value="0" />
+        </Style>
+        <Style
+            x:Key="NavigationButton"
+            BasedOn="{StaticResource GreyButton}"
+            TargetType="Button">
+            <Setter Property="FontSize" Value="18" />
+            <Setter Property="Margin" Value="0,16,0,0" />
+            <Setter Property="Width" Value="140" />
+            <Setter Property="Height" Value="36" />
+        </Style>
+        <Style
+            x:Key="QuickBarButton"
+            BasedOn="{StaticResource GreyButton}"
+            TargetType="Button">
+            <Setter Property="Margin" Value="8,0,0,0" />
+            <Setter Property="Height" Value="42" />
+        </Style>
+        <Style
+            x:Key="QuickBarButtonText"
+            BasedOn="{StaticResource {x:Type TextBlock}}"
+            TargetType="TextBlock">
+            <Setter Property="Margin" Value="8,0,8,0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Foreground" Value="#f2f5f4" />
+        </Style>
+    </Window.Resources>
 
     <DockPanel>
         <DockPanel
@@ -34,56 +89,28 @@
 
                 <Button
                     Name="buttonNews"
-                    Width="140"
-                    Height="36"
-                    Margin="0,16,0,0"
-                    HorizontalAlignment="Center"
-                    Background="#212121"
-                    BorderThickness="0"
                     Click="ButtonNews_Click"
                     Content="News"
-                    FontSize="18"
-                    Foreground="#f2f5f4" />
+                    Style="{StaticResource NavigationButton}" />
                 <Button
                     Name="buttonMods"
-                    Width="140"
-                    Height="36"
-                    Margin="0,16,0,0"
-                    HorizontalAlignment="Center"
-                    Background="#212121"
-                    BorderThickness="0"
                     Click="ButtonMods_Click"
                     Content="Mods"
-                    FontSize="18"
-                    Foreground="#f2f5f4" />
+                    Style="{StaticResource NavigationButton}" />
                 <Button
                     Name="buttonSettings"
-                    Width="140"
-                    Height="36"
-                    Margin="0,16,0,0"
-                    HorizontalAlignment="Center"
-                    Background="#212121"
-                    BorderThickness="0"
                     Click="ButtonSettings_Click"
                     Content="Settings"
-                    FontSize="18"
-                    Foreground="#f2f5f4" />
+                    Style="{StaticResource NavigationButton}" />
 
             </StackPanel>
 
             <Button
                 Name="PlayUpdateButton"
-                Width="140"
-                Height="42"
-                Margin="0,0,0,30"
-                VerticalAlignment="Bottom"
-                Background="#ee4d2e"
-                BorderThickness="0"
                 Click="PlayUpdateButton_Click"
                 Content="Play"
                 DockPanel.Dock="Bottom"
-                FontSize="24"
-                Foreground="#f2f5f4" />
+                Style="{StaticResource PlayUpdateButton}" />
 
         </DockPanel>
 
@@ -102,81 +129,47 @@
                     Orientation="Horizontal">
                     <Button
                         Name="buttonTeamspeak"
-                        Height="42"
-                        Background="#212121"
-                        BorderThickness="0"
-                        Click="ButtonTeamspeak_Click">
+                        Click="ButtonTeamspeak_Click"
+                        Style="{StaticResource QuickBarButton}">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="6,0,0,0" Source="/Images/headset.png" />
-                            <TextBlock
-                                Margin="8,0,8,0"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="Teamspeak" />
+                            <TextBlock Style="{StaticResource QuickBarButtonText}" Text="Teamspeak" />
                         </StackPanel>
                     </Button>
                     <Button
                         Name="buttonForum"
-                        Height="42"
-                        Margin="24,0,0,0"
-                        Background="#212121"
-                        BorderThickness="0"
-                        Click="ButtonForum_Click">
+                        Click="ButtonForum_Click"
+                        Style="{StaticResource QuickBarButton}">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="6,0,0,0" Source="/Images/forum.png" />
-                            <TextBlock
-                                Margin="8,0,8,0"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="Forum" />
+                            <TextBlock Style="{StaticResource QuickBarButtonText}" Text="Forum" />
                         </StackPanel>
                     </Button>
                     <Button
                         Name="buttonServer"
-                        Height="42"
-                        Margin="24,0,0,0"
-                        Background="#212121"
-                        BorderThickness="0"
-                        Click="ButtonServer_Click">
+                        Click="ButtonServer_Click"
+                        Style="{StaticResource QuickBarButton}">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="6,0,0,0" Source="/Images/server.png" />
-                            <TextBlock
-                                Margin="8,0,8,0"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="Server" />
+                            <TextBlock Style="{StaticResource QuickBarButtonText}" Text="Server" />
                         </StackPanel>
                     </Button>
                     <Button
                         Name="buttonWiki"
-                        Height="42"
-                        Margin="24,0,0,0"
-                        Background="#212121"
-                        BorderThickness="0"
-                        Click="ButtonWiki_Click">
+                        Click="ButtonWiki_Click"
+                        Style="{StaticResource QuickBarButton}">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="6,0,0,0" Source="/Images/wiki.png" />
-                            <TextBlock
-                                Margin="8,0,8,0"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="Wiki" />
+                            <TextBlock Style="{StaticResource QuickBarButtonText}" Text="Wiki" />
                         </StackPanel>
                     </Button>
                     <Button
                         Name="buttonTFAR"
-                        Height="42"
-                        Margin="24,0,0,0"
-                        Background="#212121"
-                        BorderThickness="0"
-                        Click="buttonTFAR_Click">
+                        Click="buttonTFAR_Click"
+                        Style="{StaticResource QuickBarButton}">
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="6,0,0,0" Source="/Images/tfar.png" />
-                            <TextBlock
-                                Margin="8,0,8,0"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="TFAR" />
+                            <TextBlock Style="{StaticResource QuickBarButtonText}" Text="TFAR" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
