--- a/kellerkompanie-sync/ModsPage.xaml
+++ b/kellerkompanie-sync/ModsPage.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:kellerkompanie_sync"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ModsPage"
     d:DesignHeight="450"
@@ -92,7 +91,7 @@
                                 Margin="6"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
-                                Click="CheckBox_Click"
+                                IsChecked="{Binding CheckBoxIsChecked}"
                                 Visibility="{Binding CheckBoxVisibility}" />
                             <Rectangle
                                 Width="24"
